--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,37 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalPassThroughEnv": [
+    "PGPASSWORD",
+    "RAILWAY_DEPLOYMENT_DRAINING_SECONDS",
+    "REDISPASSWORD",
+    "NODE_ENV",
+    "PGPORT",
+    "REDISPORT",
+    "POSTGRES_DB",
+    "PORT",
+    "REDIS_PASSWORD",
+    "PGDATA",
+    "REDIS_URL",
+    "JWT_SECRET",
+    "REDIS_RDB_POLICY",
+    "PGDATABASE",
+    "POSTGRES_PASSWORD",
+    "REDIS_PUBLIC_URL",
+    "SSL_CERT_DAYS",
+    "POSTGRES_USER",
+    "DATABASE_PUBLIC_URL",
+    "PGUSER",
+    "DATABASE_URL",
+    "RAILWAY_RUN_UID",
+    "REDISUSER",
+    "REDISHOST",
+    "RAILWAY_RUN_AS_ROOT",
+    "PGHOST",
+    "REDIS_AOF_ENABLED",
+    "VITE_API_BASE_URL",
+    "VITE_BASE_URL",
+    "VITE_ENABLE_MOCK_AUTH"
+  ],
   "tasks": {
     "dev": {
       "cache": false,
@@ -21,4 +53,4 @@
       "outputs": []
     }
   }
-} 
+}
