--- a/backend/package.json
+++ b/backend/package.json
@@ -62,7 +62,8 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.15.0"
+    "winston": "^3.15.0",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
@@ -82,7 +83,6 @@
     "eslint-plugin-prettier": "^5.5.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^5.22.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
