--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "npm run start:dev",
     "build": "nest build",
+    "postinstall": "prisma generate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
