fix(deploy): Refactor Docker build to fix ELIFECYCLE error\n\n- Removed 'postinstall' script from backend package.json.\n- Moved 'prisma generate' to the builder stage in the Dockerfile.\n\nThis prevents the 'postinstall' script from failing in the production\nenvironment (which lacks the 'src' directory) by generating the\nPrisma client during the build stage instead.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,6 +19,9 @@ RUN npm install --legacy-peer-deps
 # Copiar todo el código fuente del backend
 COPY backend/ ./
 
+# Generar el cliente de Prisma ANTES de compilar
+RUN npx prisma generate
+
 # Compilar la aplicación TypeScript a JavaScript
 RUN npm run build
 
