--- a/Demo/apps/superapp-unified/vercel.json
+++ b/Demo/apps/superapp-unified/vercel.json
@@ -5,8 +5,18 @@
   "env": {
     "NODE_ENV": "production",
     "NODE_OPTIONS": "--max-old-space-size=4096",
+    "VITE_APP_ENV": "production",
     "VITE_BASE_URL": "https://superapp-unified.vercel.app",
-    "VITE_ENABLE_MOCK_AUTH": "false",
+    "VITE_ENABLE_MOCK_AUTH": "true",
+    "VITE_ENABLE_MOCK_DATA": "true",
+    "VITE_MOCK_MODE": "true",
+    "VITE_USE_BACKEND": "false",
+    "VITE_MOCK_MARKETPLACE": "true",
+    "VITE_MOCK_VIDEOS": "true",
+    "VITE_MOCK_SOCIAL": "true",
+    "VITE_MOCK_WALLET": "true",
+    "VITE_MOCK_CHALLENGES": "true",
+    "VITE_MOCK_UPLAY": "true",
     "VITE_ENABLE_ANALYTICS": "true",
     "VITE_BETA_TRACKING": "true"
   },
