--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -110,7 +110,7 @@
     "react-hook-form": "^7.58.1",
     "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "6.30.1",
     "recharts": "^2.15.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "serve": "^14.2.3",
