✨ Integración de scripts y mejoras en la gestión de Guardianes
✅ NUEVOS ARCHIVOS Y CAMBIOS:
- Añadido script `invoke-guardian-marketplace.sh` para invocar el marketplace.
- Añadido script `invoke-guardian-uplay.sh` para invocar el módulo ÜPlay.
- Creación de archivos de referencia rápida para Guardianes.
- Implementación de archivo `.guardian-pids` para gestionar PIDs de backend y frontend.
- Nuevos archivos de documentación y resúmenes sobre la implementación de Guardianes.

🎯 ESTADO DE FUNCIONALIDADES:
- Scripts listos para invocación de Guardianes.
- Documentación completa para facilitar el uso y la referencia.

🎉 Preparación para la implementación de Guardianes en el ecosistema CoomÜnity.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev:frontend": "turbo run dev",
     "dev:superapp": "npm run dev --workspace=coomunity-superapp",
     "dev:admin": "npm run dev --workspace=@coomunity/admin-frontend",
+    "dev:guardians": "npm run dev --workspace=guardians-portal",
     "dev:fullstack": "./scripts/start-all.sh",
     "dev:builder": "cd Demo/apps/superapp-unified && npx builder.io@latest launch",
     "dev:smart": "./scripts/dev-port-manager.sh",
@@ -54,7 +55,9 @@
     "dm:superapp": "./scripts/dev-manager.sh start superapp",
     "dm:status": "./scripts/dev-manager.sh status",
     "dm:test": "./scripts/dev-manager.sh test",
-    "dm:open": "./scripts/dev-manager.sh open"
+    "dm:open": "./scripts/dev-manager.sh open",
+    "invoke:guardianes:marketplace": "./scripts/invoke-guardian-marketplace.sh",
+    "stop:guardianes": "source .guardian-pids 2>/dev/null && kill $BACKEND_PID $FRONTEND_PID 2>/dev/null || pkill -f 'npm run dev'"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
