✨ Integración de scripts y mejoras en la gestión de Guardianes
✅ NUEVOS ARCHIVOS Y CAMBIOS:
- Añadido script `invoke-guardian-marketplace.sh` para invocar el marketplace.
- Añadido script `invoke-guardian-uplay.sh` para invocar el módulo ÜPlay.
- Creación de archivos de referencia rápida para Guardianes.
- Implementación de archivo `.guardian-pids` para gestionar PIDs de backend y frontend.
- Nuevos archivos de documentación y resúmenes sobre la implementación de Guardianes.

🎯 ESTADO DE FUNCIONALIDADES:
- Scripts listos para invocación de Guardianes.
- Documentación completa para facilitar el uso y la referencia.

🎉 Preparación para la implementación de Guardianes en el ecosistema CoomÜnity.

--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -95,6 +95,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@vitejs/plugin-react": "^4.5.2",
+    "@vitest/mocker": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
