--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -106,8 +106,8 @@
     "lucide-react": "^0.344.0",
     "mathjs": "^14.5.2",
     "postcss": "^8.4.48",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.58.1",
     "react-lazy-load-image-component": "^1.6.3",
@@ -151,6 +151,12 @@
     "globals": "^16.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tinyrainbow": "^1.2.0",
-    "workbox-window": "^7.3.0"
+    "workbox-window": "^7.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "peerDependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
