--- a/apps/admin-frontend/package.json
+++ b/apps/admin-frontend/package.json
@@ -63,8 +63,6 @@
     "nostr-tools": "^2.13.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-hook-form": "^7.51.0",
     "react-i18next": "^13.2.2",
     "react-markdown": "^10.1.0",
@@ -113,9 +111,7 @@
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0",
     "vite-plugin-pwa": "^1.0.0",
-    "vitest": "^1.3.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "vitest": "^1.3.1"
   },
   "peerDependencies": {
     "react": "18.3.1",
