--- a/apps/guardians-portal-frontend/package.json
+++ b/apps/guardians-portal-frontend/package.json
@@ -14,9 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
-    "framer-motion": "^12.19.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "framer-motion": "^12.19.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
