--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
-    "dev:backend": "npm run start:backend:dev",
+    "dev:backend": "npm run dev --workspace=backend",
     "dev:frontend": "turbo run dev",
     "dev:superapp": "npm run dev --workspace=coomunity-superapp",
     "dev:admin": "npm run dev --workspace=@coomunity/admin-frontend",
@@ -147,15 +147,15 @@
     "happy-dom": "^17.4.7",
     "prettier": "^3.5.3",
     "prisma": "^5.22.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "tsx": "^4.19.4",
     "turbo": "^2.5.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-plugin-pwa": "^1.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "vite-plugin-pwa": "^1.0.0"
   },
   "peerDependencies": {
     "react": "18.3.1",
