--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "socket.io": "^4.8.1",
     "sonner": "^2.0.3",
     "ts-node": "^10.9.2",
+    "use-debounce": "^10.0.5",
     "winston": "^3.17.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.3"
