--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "helmet": "^8.0.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "node-abort-controller": "^3.1.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
