--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   },
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.backend.json" },
+    { "path": "./Demo/apps/superapp-unified" }
   ]
 }
