--- a/backend/package.json
+++ b/backend/package.json
@@ -67,6 +67,7 @@
     "winston": "^3.15.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
@@ -74,6 +75,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.15.33",
     "@types/nodemailer": "^6.4.17",
@@ -83,6 +85,7 @@
     "eslint": "^9.15.0",
     "eslint-plugin-prettier": "^5.5.0",
     "jest": "^29.7.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.4.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
