--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "@prisma/client": "^5.22.0",
     "@slack/webhook": "^7.0.5",
     "@types/node-fetch": "^2.6.12",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -71,6 +72,7 @@
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
