--- a/Demo/apps/superapp-unified/.dockerignore
+++ b/Demo/apps/superapp-unified/.dockerignore
@@ -1,6 +1,29 @@
 # Dependencies
 node_modules
+dist
+.git
+.env.local
+.env.*.local
+*.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+coverage
+.nyc_output
+*.tgz
+*.tar.gz
+.cache
+.parcel-cache
+.vscode
+.idea
+*.swp
+*.swo
+*~
+e2e/test-results
+e2e/playwright-report
+playwright-report
+test-results
 
 # Build artifacts
 dist/
@@ -39,4 +62,4 @@ debug-*.png
 # Development
 scripts/
 *.spec.*
-*.test.* 
+*.test.*
