--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "packageManager": "npm@10.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "workspaces": [
     "backend",
     "Demo/apps/*",
