--- a/Demo/apps/superapp-unified/nixpacks.toml
+++ b/Demo/apps/superapp-unified/nixpacks.toml
@@ -1,2 +1,11 @@
 [phases.setup]
 nixPkgs = ["nodejs_20"]
+
+[phases.install]
+cmd = "npm install --legacy-peer-deps"
+
+[phases.build]
+cmd = "npm run build"
+
+[start]
+cmd = "npm run start"
