[BACKEND] Dockerfile: migrate to node:20-slim, remove Alpine/OpenSSL hacks, robust Prisma production build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,18 +6,21 @@
 # ================================================================
 # Etapa 1: Builder - Construir la aplicación
 # ================================================================
-FROM node:20-alpine AS builder
+FROM node:20-slim AS builder
 
 WORKDIR /usr/src/app
 
 # Copiar archivos de dependencias
 COPY package*.json ./
 
-# Instalar TODAS las dependencias (incluyendo devDependencies para el build) y OpenSSL 1.1 para Prisma
-RUN apk add --no-cache openssl-dev && npm install --legacy-peer-deps
+# Instalar TODAS las dependencias (incluyendo devDependencies para el build)
+RUN npm install --legacy-peer-deps
 
 # Copiar todo el código fuente del backend
 COPY . ./
+
+# Generar Prisma Client (importante para engines correctos)
+RUN npx prisma generate
 
 # Compilar la aplicación TypeScript a JavaScript
 RUN npm run build
@@ -25,9 +28,8 @@ RUN npm run build
 # ================================================================
 # Etapa 2: Production - Crear la imagen final y ligera
 # ================================================================
-FROM node:20-alpine AS production
+FROM node:20-slim AS production
 
-# Argumento para el usuario de la aplicación
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
@@ -35,16 +37,13 @@ WORKDIR /usr/src/app
 
 # Copiar archivos de dependencias
 COPY package*.json ./
-
-# ❗ CORRECCIÓN CRÍTICA: Copiar el esquema de Prisma ANTES de instalar para que `postinstall` funcione con el binaryTarget correcto
 COPY prisma ./prisma
 
-# Instalar SOLO las dependencias de producción y OpenSSL para Prisma
-RUN apk add --no-cache openssl-dev && npm install --only=production --legacy-peer-deps && npm cache clean --force
+# Instalar SOLO las dependencias de producción
+RUN npm install --only=production --legacy-peer-deps && npm cache clean --force
 
-# Copiar aplicación compilada desde la etapa de builder
+# Copiar aplicación compilada y Prisma Client desde builder
 COPY --from=builder /usr/src/app/dist ./dist
-COPY --from=builder /usr/src/app/node_modules/prisma ./node_modules/prisma
 COPY --from=builder /usr/src/app/node_modules/.prisma ./node_modules/.prisma
 
 # Exponer el puerto
@@ -53,4 +52,4 @@ EXPOSE 3002
 # Iniciar la aplicación después de ejecutar las migraciones
 CMD ["npm", "run", "start:prod:migrate"]
 
-# Trigger re-deploy v2
+# Trigger re-deploy v3
