--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "prisma migrate deploy && node dist/main.js",
     "start:prod:migrate": "npx prisma migrate deploy && node dist/main",
     "lint": "eslint . --fix",
     "test": "jest",
@@ -27,7 +27,8 @@
     "db:seed": "npx ts-node prisma/seed.ts",
     "db:studio": "prisma studio",
     "migration:generate": "npx prisma migrate dev",
-    "migration:deploy": "npx prisma migrate deploy"
+    "migration:deploy": "npx prisma migrate deploy",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
