--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@nestjs/cli": "^11.0.7",
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
     "@nestjs/jwt": "^10.2.0",
@@ -41,7 +42,7 @@
     "@nestjs/swagger": "^8.0.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.1.3",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.10.1",
     "@slack/webhook": "^7.0.5",
     "@types/node-fetch": "^2.6.12",
     "bcrypt": "^6.0.0",
@@ -59,15 +60,14 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prisma": "^5.22.0",
+    "prisma": "^6.10.1",
     "prom-client": "^15.1.3",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.15.0",
-    "@nestjs/cli": "^11.0.7"
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
