--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT=3002
 NODE_ENV=development
 DATABASE_URL="postgresql://kevinp:@localhost:5432/gamifier?schema=public"
-JWT_SECRET="your_super_secret_jwt_key_change_in_production"
+JWT_SECRET="cop-2025-$(openssl rand -hex 16)"
 REDIS_URL="redis://localhost:6379"
+REDIS_URL=redis://red-d1fjqp2li9vc739kf560:6379
