--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.1",
     "@nestjs/core": "^11.1.1",
     "@nestjs/jwt": "^11.0.0",
@@ -92,6 +93,7 @@
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
     "bcryptjs": "^3.0.2",
+    "cache-manager": "^7.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^2.30.0",
