--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
@@ -49,6 +50,7 @@
     "@types/node-fetch": "^2.6.12",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^7.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
