--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,5 +1,5 @@
   PORT=3002
   NODE_ENV=production
-  DATABASE_URL="postgresql://coomunity_user:...@dpg-d1fjbp2li9vc739jvefg-a/coomunity_db"
+  DATABASE_URL="postgresql://coomunity_user:m5ypLWFQRqBPDn83yd4kxCuJ31v7DW52@dpg-d1fjbp2li9vc739jvefg-a/coomunity_db"
   JWT_SECRET="cop-2025-$(openssl rand -hex 16)"
   REDIS_URL="redis://red-d1fjqp2li9vc739kf560:6379"
