--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "prisma migrate deploy && prisma db seed && node dist/main.js",
+    "start:prod": "prisma migrate deploy && node dist/main.js",
     "start:prod:migrate": "npx prisma migrate deploy && node dist/main",
     "lint": "eslint . --fix",
     "test": "jest",
