--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "test:e2e": "pnpm --filter=coomunity-superapp test:e2e",
-    "test:e2e:ci": "pnpm --filter=coomunity-superapp test:e2e",
-    "test:e2e:report": "pnpm --filter=coomunity-superapp test:e2e:report",
+    "test:e2e": "npm --filter=coomunity-superapp test:e2e",
+    "test:e2e:backend": "npm test --workspace=backend --",
+    "test:e2e:ci": "npm --filter=coomunity-superapp test:e2e",
+    "test:e2e:report": "npm --filter=coomunity-superapp test:e2e:report",
     "clean-vite-cache": "rm -rf node_modules/.vite",
     "clean:backend": "rm -rf dist",
     "clean:processes": "npm run stop:all",
