--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -116,6 +116,7 @@
     "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.6.3",
+    "react-youtube": "^10.1.0",
     "recharts": "^2.15.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "serve": "^14.2.3",
