--- a/Demo/apps/superapp-unified/tsconfig.json
+++ b/Demo/apps/superapp-unified/tsconfig.json
@@ -15,6 +15,7 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
