--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "clean-vite-cache": "rm -rf node_modules/.vite",
     "clean:backend": "rm -rf dist",
     "clean:processes": "npm run stop:all",
-    "db:seed": "ts-node prisma/seed.ts",
-    "db:reset": "npx prisma migrate reset",
+    "db:seed": "npm run db:seed --workspace=backend",
+    "db:reset": "npm run db:reset --workspace=backend",
     "start:backend": "node dist/main.js",
     "start:backend:dev": "cd backend && npm run start:dev",
     "start:backend:prod": "npm run clean:backend && npm run build:backend && node dist/main.js",
