--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "npm run start:dev",
-    "build": "rm -rf dist && nest build",
+    "build": "rm -rf dist && nest build && tsc --project tsconfig.seed.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
@@ -25,7 +25,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:reset": "prisma migrate reset --force",
-    "db:seed": "npx ts-node prisma/seed.ts",
+    "db:seed": "node dist/prisma/seed.js",
     "db:studio": "prisma studio",
     "migration:generate": "npx prisma migrate dev",
     "migration:deploy": "npx prisma migrate deploy",
