--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "db:push": "prisma db push",
     "db:reset": "prisma migrate reset --force",
     "db:seed": "node dist/prisma/seed.js",
+    "db:seed:dev": "ts-node prisma/seed-dev.ts",
     "db:studio": "prisma studio",
     "migration:generate": "npx prisma migrate dev",
     "migration:deploy": "npx prisma migrate deploy",
