--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "npm run start:dev",
-    "build": "rm -rf dist && nest build && tsc --project tsconfig.seed.json",
+    "build": "prisma generate && nest build && tsc --project tsconfig.seed.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
