--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,6 @@
     "prestart:prod": "[ -f .env.production ] && cp .env.production .env || echo 'Using environment variables from platform (Render/Production)'"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.8.0",
     "@google/generative-ai": "^0.24.1",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/cli": "^11.0.7",
@@ -48,7 +47,7 @@
     "@nestjs/swagger": "^8.0.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.1.3",
-    "@prisma/client": "^6.11.0",
+    "@prisma/client": "5.16.2",
     "@slack/webhook": "^7.0.5",
     "@types/node-fetch": "^2.6.12",
     "bcrypt": "^6.0.0",
@@ -67,7 +66,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prisma": "^6.11.0",
+    "prisma": "5.16.2",
     "prom-client": "^15.1.3",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
@@ -79,6 +78,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
     "@types/bcrypt": "^5.0.2",
@@ -124,6 +124,6 @@
     }
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node src/prisma/seed.ts"
   }
 }
