--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:reset": "prisma migrate reset --force",
-    "db:seed": "prisma generate && node dist/prisma/seed.js",
+    "db:seed": "echo '--- Verifying Prisma Client generation ---' && ls -la node_modules/.prisma/client/ && echo '--- Running Seed ---' && prisma generate && node dist/prisma/seed.js",
     "db:seed:dev": "ts-node prisma/seed-dev.ts",
     "db:studio": "prisma studio",
     "migration:generate": "npx prisma migrate dev",
