--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "npm run start:dev",
-    "build": "prisma generate && nest build",
+    "build": "rm -rf dist && prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -25,7 +25,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:reset": "prisma migrate reset --force",
-    "db:seed": "echo '--- Verifying Prisma Client generation ---' && ls -la node_modules/.prisma/client/ && echo '--- Running Seed ---' && prisma generate && node dist/prisma/seed.js",
+    "db:seed": "node dist/prisma/seed.js",
     "db:seed:dev": "ts-node prisma/seed-dev.ts",
     "db:studio": "prisma studio",
     "migration:generate": "npx prisma migrate dev",
