(backend): streamline build and seed scripts for improved efficiency

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
   "main": "dist/main.js",
   "scripts": {
     "dev": "npm run start:dev",
-    "build": "rm -rf dist && prisma generate && nest build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "prisma migrate deploy && npm run db:seed && node dist/main.js",
+    "start:prod": "prisma generate && prisma migrate deploy && node dist/main.js",
     "start:prod:migrate": "npx prisma migrate deploy && node dist/main",
     "lint": "eslint . --fix",
     "test": "jest",
@@ -25,7 +25,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:reset": "prisma migrate reset --force",
-    "db:seed": "node dist/prisma/seed.js",
+    "db:seed": "prisma generate && node dist/prisma/seed.js",
     "db:seed:dev": "ts-node prisma/seed-dev.ts",
     "db:studio": "prisma studio",
     "migration:generate": "npx prisma migrate dev",
