🛠️ FIX: Configurar Prisma migrations según mejores prácticas oficiales
- Mover migraciones a preDeployCommand según docs de Prisma + Render
- Separar responsabilidades: migraciones en pre-deploy, app start en dockerCommand
- Seguir patrón oficial: https://www.prisma.io/docs/orm/prisma-client/deployment/traditional/deploy-to-render
- Resolver error P2022 en producción (columna users.currentStage faltante)

Cambios:
- render.yaml: Agregar preDeployCommand con 'npx prisma migrate deploy'
- backend/package.json: Limpiar start:prod (solo generate + start, sin migrations)
- Implementar separación clara entre build/migrate/start phases

Esto asegura que las migraciones se ejecuten ANTES del inicio de la app,
evitando errores P2022 por esquema desactualizado en base de datos.

--- a/render.yaml
+++ b/render.yaml
@@ -21,7 +21,8 @@ services:
     branch: main
     dockerfilePath: ./backend/Dockerfile
     healthCheckPath: /health
-    dockerCommand: "npm run start:prod:migrate"
+    preDeployCommand: "npx prisma migrate deploy"
+    dockerCommand: "npm run start:prod"
     envVars:
       - key: PORT
         value: 3002
