--- a/render.yaml
+++ b/render.yaml
@@ -21,8 +21,8 @@ services:
     branch: main
     dockerfilePath: ./backend/Dockerfile
     healthCheckPath: /health
-    preDeployCommand: "npx prisma migrate deploy && npm run db:seed"
-    dockerCommand: "npm run start:prod"
+    preDeployCommand: "npx prisma migrate deploy"
+    dockerCommand: 'sh -c "npx prisma migrate deploy && npm run db:seed && npm run start:prod"'
     envVars:
       - key: PORT
         value: 3002
