🛠️ UPDATE: Refactor production start script in package.json
- Modificado el comando "start:prod" para incluir la ejecución de migraciones y la siembra de la base de datos antes de iniciar la aplicación.
- Esto asegura que la base de datos esté actualizada y poblada con datos necesarios al desplegar la aplicación.

Cambios:
- backend/package.json: Actualización del script "start:prod" para ejecutar "npm run migration:deploy" y "npm run db:seed".

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "npm run migration:deploy && npm run db:seed && node dist/main.js",
+    "start:prod": "npx prisma migrate deploy && node dist/prisma/seed.js && node dist/main.js",
     "start:prod:migrate": "npx prisma migrate deploy && node dist/main",
     "lint": "eslint . --fix",
     "test": "jest",
