--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
   PORT=3002
   NODE_ENV=development
-  DATABASE_URL="postgresql://kevinp:@localhost:5432/gamifier_local?schema=public"
+  DATABASE_URL="postgresql://kevinp:JSgrjv96urOpJkMyvHqZWm14dgHEMUAH@localhost:5432/gamifier_local?schema=public"
   JWT_SECRET="cop-2025-july03"
   REDIS_URL="redis://localhost:6379"
