--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "npx prisma migrate deploy && node dist/prisma/seed.js && node dist/main.js",
+    "start:prod": "npx prisma migrate deploy && node dist/main.js",
     "start:prod:migrate": "npx prisma migrate deploy && node dist/main",
     "lint": "eslint . --fix",
     "test": "jest",
@@ -25,7 +25,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:reset": "prisma migrate reset --force",
-    "db:seed": "prisma generate && node dist/prisma/seed.js",
+    "db:seed": "npx prisma generate && node dist/prisma/seed.js",
     "db:seed:dev": "ts-node prisma/seed-dev.ts",
     "db:studio": "prisma studio",
     "migration:generate": "npx prisma migrate dev",
