--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -2,8 +2,8 @@
   "name": "@coomunity/shared-types",
   "version": "1.0.0",
   "description": "Tipos TypeScript compartidos para métricas filosóficas de CoomÜnity",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
