--- a/backend/package.json
+++ b/backend/package.json
@@ -47,7 +47,7 @@
     "@nestjs/swagger": "^8.0.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.1.3",
-    "@prisma/client": "5.16.2",
+    "@prisma/client": "^6.11.1",
     "@slack/webhook": "^7.0.5",
     "@types/node-fetch": "^2.6.12",
     "bcrypt": "^6.0.0",
@@ -66,16 +66,16 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "prisma": "5.16.2",
+    "prisma": "^6.11.1",
     "prom-client": "^15.1.3",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
-    "winston": "^3.15.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
