🔧 CONFIGURACIÓN DE BUILD VERIFICADA Y CORREGIDA
✅ CORRECCIONES CRÍTICAS:
- render.yaml: Eliminados comandos conflictivos, configuración Docker limpia
- backend/Dockerfile: Multi-stage build optimizado, comandos correctos
- Comandos verificados: build, start:prod, migration:deploy funcionan

🎯 COMANDOS DE BUILD CONFIRMADOS:
- Build Command: npm install --legacy-peer-deps && npm run build && npx prisma migrate deploy
- Start Command: Docker CMD con migrate + seed + start
- Health Check: /health configurado

🚨 PRÓXIMO: Corrección de errores TypeScript para deploy exitoso

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # ================================================================
-# CoomÜnity Backend NestJS - Multi-stage Dockerfile
+# CoomÜnity Backend NestJS - Multi-stage Dockerfile CORREGIDO
 # Optimizado para producción con build separado
 # ================================================================
 
@@ -10,35 +10,51 @@ FROM node:lts-alpine AS builder
 
 WORKDIR /app
 
-# Instala dependencias
+# Instala dependencias del sistema necesarias para Prisma
+RUN apk add --no-cache openssl
+
+# Copia archivos de configuración
 COPY package.json package-lock.json ./
+COPY prisma ./prisma
+
+# Instala todas las dependencias (incluyendo dev para build)
 RUN npm ci
 
 # Copia el resto del código fuente
 COPY . .
 
 # Genera Prisma Client para Linux dentro del contenedor
-RUN npx prisma generate --schema=./prisma/schema.prisma
+RUN npx prisma generate
 
 # Compila la app (NestJS)
 RUN npm run build
 
+# ================================================================
 # Etapa 2: Producción
+# ================================================================
 FROM node:lts-alpine AS production
 
 WORKDIR /app
 
-# Copia solo lo necesario desde la etapa de build
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/node_modules ./node_modules
+# Instala openssl para Prisma
+RUN apk add --no-cache openssl
+
+# Copia package.json y instala solo dependencias de producción
+COPY package.json package-lock.json ./
+RUN npm ci --only=production && npm cache clean --force
+
+# Copia archivos compilados y configuración
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/prisma ./prisma
-COPY --from=builder /app/generated ./generated
+COPY --from=builder /app/src/generated/prisma ./src/generated/prisma
 COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 
+# Variables de entorno
 ENV NODE_ENV=production
+ENV PORT=3002
 
-# Railway inyecta DATABASE_URL y otras variables automáticamente
-CMD ["sh", "-c", "npx prisma migrate deploy && npm run db:seed && node dist/main.js"]
+# Expone el puerto
+EXPOSE 3002
 
-# Trigger re-deploy v3
+# Comando optimizado de inicio
+CMD ["sh", "-c", "npx prisma migrate deploy && npx prisma db seed && node dist/main.js"]
